<resources>
    <string name="app_name">GoLo</string>
    <string name="action_settings">Settings</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_togo">To Go</string>
    <string name="title_locals">Locals</string>
    <string name="title_account">Account</string>
    <string name="explorer_itineraries">Itineraries</string>
    <string name="explorer_locals">Locals</string>
    <string name="explorer_must_see">Must See</string>
    <string name="explorer_travelling">Travelling</string>
    <string name="explorer_food_drink">Food&amp;Drink</string>
    <string name="explorer_shopping">Shopping</string>
    <string name="explorer_art_culture">Art&amp;Culture</string>
    <string name="explorer_nature">Nature</string>
    <string name="explorer_nightlife">Nightlife</string>
    <string name="explorer_more">More</string>
    <string name="explorer_adventure">Adventure</string>
    <string name="explorer_historical">Historical</string>
    <string name="explorer_camping">Camping</string>
    <string name="explorer_show">Shows</string>
    <string name="explorer_classes">Classes</string>
    <string name="item_text">Reviews</string>
    <string name="item_from_here">%1s from here</string>
    <string name="item_follow">Follow</string>
    <string name="item_see_all">See All</string>
    <string name="text_where_are">Where are you going?</string>
    <string name="text_popular_destination">Popular Destinations</string>

    <string name="explore_menu_1">Explorer by</string>
    <string name="explore_menu_2">Offers Around You</string>
    <string name="explore_menu_3">Suggested Travel Mates</string>
    <string name="explore_menu_4">Trending Places</string>

    <string name="new_plan_header">Create New Plan</string>
    <string name="new_plan_trip_name">Trip Name</string>
    <string name="new_plan_destination">Destination</string>
    <string name="new_plan_start_planning">Start Planning</string>
    <string name="new_plan_trip_name_hint">Trip Name</string>
    <string name="new_plan_trip_start_end_date">Start Date - End Date</string>
    <string name="planning">Planning</string>
    <string name="create_new_plan">Create New Plan</string>
    <string name="planning_period">Tue, Sep 01 - Sat, Sep 05</string>
    <string name="planning_destination">Chiang Mai 2020</string>
    <string name="planning_add_here">Add Here</string>
    <string name="title_activity_multiple">MultipleActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="go_to_explore">Go Explore!</string>
    <string name="go_to_my_favorite">Go to My Favorite</string>
    <string name="no_plan_this_day">No Plans on This Day</string>

    <!--    TODO delete-->
    <string name="planning_item_location">Pong Yang Adventure Park Experience</string>
    <string name="planning_item_score">4.4</string>
    <string name="planning_item_review">(67 Reviews) | 1.5 km from here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
