<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MTheme.NoActionBar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_plan" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/no_plan_this_day"
            android:textAlignment="center"
            android:textColor="#D5D7DB"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_explore"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/go_to_explore"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_favorite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/go_to_my_favorite"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite"
            app:strokeColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>