<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:paddingStart="15dp"
    android:paddingTop="10dp"
    android:paddingEnd="15dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_toStartOf="@+id/location_more_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_name"
            tools:text="Pong Yang Adventure Park Experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planning_item_location"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_star"
                app:srcCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/score_review"
                tools:text="4.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@id/imageView4"
                android:text="@string/planning_item_score"
                android:textColor="#FFD322"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/review_and_distant"
                tools:text="(67 Reviews) | 1.5 km from here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/score_review"
                android:text="@string/planning_item_review"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/location_more_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_more_vertical_blue" />

</RelativeLayout>